--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#4fc3f7</color>
+    <color name="colorPrimaryDark">#03a9f4</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="backgroundRed">#e3f2fd</color>
+    <color name="cardView">#81d4fa</color>
+    <color name="displayText">#f5f5f5</color>
+    <color name="hintColor">#616161</color>
+
+
 </resources>
