--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome,"
-        android:color="@color/colorAccent"
+        android:textColor="@color/colorAccent"
+        android:textStyle="bold|italic"
         android:layout_centerHorizontal="true"
         android:layout_margin="20sp"
         android:textSize="30sp"/>
